[package]
name = "emval"
version = "0.1.5"
description = "emval is a blazingly fast email validator"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/bnkc/emval"
repository = "https://github.com/bnkc/emval"
readme = "README.md"
keywords = ["email", "validation"]
categories = ["email"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "emval"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.23.0"

# emval dependencies
idna = "1.0.2"
lazy_static = "1.5.0"
regex = "1.10.5"
unicode-properties = "0.1.1"
rstest = "0.21.0"
unicode_names2 = "1.2.2"
trust-dns-resolver = "0.23.2"

[profile.release]
lto = true
