[package]
name = "emval"
version = "0.1.4"
description = "emval is a blazingly fast email validator"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_emval"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "=0.25.1", features = ["extension-module", "abi3-py38"] }

# emval dependencies
idna = "1.0.2"
lazy_static = "1.5.0"
regex = "1.10.5"
unicode-properties = "0.1.1"
rstest = "0.21.0"
unicode_names2 = "1.2.2"
trust-dns-resolver = "0.23.2"

# polars dependencies
pyo3-polars = { version = "0.22", features = ["derive", "dtype-struct"] }
polars = { version = "0.49.1", features = ["dtype-struct"], default-features = false }
polars-arrow = { version = "0.49.1", default-features = false }
serde = { version = "1", features = ["derive"] }
