[package]
name = "emval"
version = "0.1.12"
description = "emval is a blazingly fast email validator"
edition = "2021"
license = "MIT"
homepage = "https://github.com/bnkc/emval"
repository = "https://github.com/bnkc/emval"
readme = "README.md"
keywords = ["email", "validation"]
categories = ["email"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "emval"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "=0.25.1", features = [
  "extension-module",
  "abi3-py38",
], optional = true }

# emval dependencies
icu_normalizer = "2.0.0"
idna = "1.0.2"
lazy_static = "1.5.0"
regex = "1.10.5"
unicode-properties = "0.1.1"
rstest = "0.21.0"
unicode_names2 = "1.2.2"
trust-dns-resolver = { version = "0.23.2", optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }

# polars dependencies
pyo3-polars = { version = "0.22", features = [
  "derive",
  "dtype-struct",
], optional = true }
polars = { version = "0.49.1", features = [
  "dtype-struct",
], default-features = false, optional = true }
polars-arrow = { version = "0.49.1", default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }

[features]
default = ["python", "polars"]
python = ["dep:pyo3", "dep:pyo3-polars", "dep:polars", "dep:polars-arrow"]
polars = ["dep:pyo3-polars", "dep:polars", "dep:polars-arrow", "dns"]
dns = ["dep:trust-dns-resolver"]
wasm = ["dep:wasm-bindgen"]

[profile.release]
lto = true

